<!--
  ~ Copyright (c) CUBANAPP LLC 2019-2024 .
  -->

<resources>
    <string name="app_name" translatable="true">Bolita Cubana</string>
    <string name="title_activity_main" translatable="true">Popular Lotteries</string>
    <string name="title_home" translatable="true">Lottery</string>
    <string name="fragmentHome" translatable="true">Lottery Drawings</string>
    <string name="title_dashboard" translatable="true">Search</string>
    <string name="fragmentSearch" translatable="true">Search in a Date</string>
    <string name="title_notifications" translatable="false">Charada</string>
    <string name="title_activity_settings" translatable="true">Settings</string>

    <string name="cancel" translatable="true">Cancel</string>
    <string name="open" translatable="true">Open</string>
    <string name="dialog_permission" translatable="true">Internet Permission is needed to work</string>
    <string name="preference_file_key" translatable="false">com.cubanapp.bolitacubana.shared_preferences</string>
    <string name="preference_file_key2" translatable="false">com.cubanapp.bolitacubana.adivinanza_preferences</string>
    <string name="dialog_permission2" translatable="true">Network permission is needed to work</string>
    <string name="retry" translatable="true">Retry</string>
    <string name="dismiss" translatable="true">Dismiss</string>
    <string name="update" translatable="true">A newer version is available to download</string>
    <string name="florida" translatable="false">Pick3 &amp; Pick4</string>
    <string name="newyork" translatable="false">NUMBERS &amp; Win4</string>
    <string name="georgia" translatable="false">Cash3 &amp; Cash4</string>
    <string name="sevenDays" translatable="true">Last Drawings</string>
    <string name="pickDate" translatable="true">Pick a Date</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Drawings</string>
    <string name="cubanapp_channel_id" translatable="false">cubanapp_channel</string>
    <string name="cubanapp_channel_name_enabled">Receive Notifications from CUBANAPP Support Team</string>
    <string name="cubanapp_channel_name" translatable="true">Support</string>
    <string name="cubanapp_channel_name_topic" translatable="false">Support</string>
    <string name="promotional_topic" translatable="false">News</string>

    <string name="dia" translatable="true">Day</string>
    <string name="noche" translatable="true">Night</string>
    <string name="tarde" translatable="true">Evening</string>
    <string name="s2pm" translatable="false">2:00 pm</string>
    <string name="s10pm" translatable="false">10:00 pm</string>
    <string name="s23pm" translatable="false">2:45 pm</string>
    <string name="s103pm" translatable="false">10:45 pm</string>
    <string name="s123pm" translatable="false">12:45 pm</string>
    <string name="s73pm" translatable="false">7:15 pm</string>
    <string name="s113pm" translatable="false">11:45 pm</string>
    <string name="pick3" translatable="true">Pick 3</string>
    <string name="pick4" translatable="true">Pick 4</string>
    <string name="fechaempty" translatable="false">--/--/----</string>
    <string name="search_another" translatable="true">Search another date</string>
    <string name="last_seven" translatable="true">Last drawings</string>
    <string name="resultados_florida" translatable="true">Florida Lottery Drawings</string>
    <string name="results_georgia" translatable="true">Georgia Lottery Drawings</string>
    <string name="results_newyork" translatable="true">New York Lottery Drawings</string>


    <!-- Preferencias -->
    <string name="firebase" translatable="true">Bolita Cubana Data Usage</string>
    <string name="firebaseData" translatable="true">Anonimous Data Collection (Global)</string>
    <string name="data_disabled" translatable="true">Data Collection is disabled for all Google services</string>
    <string name="data_enabled" translatable="true">Data Collection is enabled for all Google services</string>
    <string name="notification" translatable="true">Notifications</string>
    <string name="notificaciontitle" translatable="true">Florida Drawings</string>
    <string name="notification_disabled" translatable="true">You will not receive drawings</string>
    <string name="notification_enabled" translatable="true">Receive Pick3 &amp; Pick4 Drawings</string>
    <string name="notificaciontitle1" translatable="true">Georgia Drawings</string>
    <string name="notification1_enabled" translatable="true">Receive Cash3 &amp; Cash4 Drawings</string>
    <string name="notificaciontitle2" translatable="true">New York Drawings</string>
    <string name="notification2_enabled" translatable="true">Receive Numbers &amp; Win4 Drawings</string>
    <string name="notificacionpromotional" translatable="true">Receive Bolita Cubana News as Notifications</string>
    <string name="promotional" translatable="true">News</string>
    <string name="promotional_disabled" translatable="true">Notifications disabled</string>
    <string name="sdk19" translatable="true">Disabled until Android 4.4 (KitKat)</string>
    <string name="resourceManagement" translatable="true">Send on Foreground</string>
    <string name="analytics" translatable="true">Send Analytics</string>
    <string name="adstitle" translatable="true">Google Advertising</string>
    <string name="adspersonal" translatable="true">Use my Google Ads ID</string>
    <string name="messageDelegation" translatable="true">Autoresolve Permission</string>
    <string name="errorInformes" translatable="true">Error logging</string>
    <string name="crashlytic" translatable="true">Auto send Error log</string>
    <string name="firebaseperf" translatable="true">Send performance statistics</string>
    <string name="performance" translatable="true">Performance Statistics</string>
    <string name="exportBigQuery" translatable="true">Export BigQuery metrics</string>
    <string name="notificationdgranted" translatable="true">Notifications permission granted</string>
    <string name="notificationdeclined" translatable="true">Bolita Cubana can\'t post notifications without permission</string>
    <string name="msg_subscribed" translatable="true">Updated!</string>
    <string name="msg_subscribe_failed" translatable="true">Failed</string>
    <string name="english" translatable="true">English</string>
    <string name="spanish" translatable="true">Spanish</string>

    <string name="accept" translatable="true">Accept</string>

    <string name="link" translatable="true">"Bolita Cubana suggests you visit the following link: \n\n"</string>
    <string name="important" translatable="true">Important</string>
    <string name="obsolete" translatable="true">Google Play Update</string>
    <string name="visitlink" translatable="true">Look this</string>
    <string name="connection" translatable="true">It is necessary to have an active Wifi or Data connection</string>
    <string name="launcherimage" translatable="true">Launcher Image</string>
    <string name="space" translatable="false"> </string>
    <string name="optionsmenu" translatable="true">Options</string>
    <string name="about" translatable="true">About</string>
    <string name="clearm" translatable="true">Clear Cache</string>
    <string name="errorData" translatable="true">An error occurred while getting the data</string>
    <string name="erroSync" translatable="true">A fatal error has occurred while synchronizing data</string>
    <string name="connslow" translatable="true">Your connection is slow, please try again.</string>
    <string name="lostconn" translatable="true">The connection has been lost, please try again.</string>
    <string name="lostsvr" translatable="true">The connection with the Bolita Cubana servers has been lost</string>
    <string name="slowconn" translatable="true">It seems your connection is slow</string>
    <string name="generateData" translatable="true">An error occurred while getting the data</string>
    <string name="internalerror" translatable="true">Bolita Cubana found an internal error</string>
    <string name="aboutinfo1" translatable="true">Version: \n</string>
    <string name="aboutinfo2" translatable="true">\n\nEmail: \nhelp@cubanapp.info</string>
    <string name="openprivacy" translatable="true">View Privacy</string>
    <string name="languageselector" translatable="true">Language Selector</string>
    <string name="copyright" translatable="false">\@CUBANAPPLLC Copyright 2019-2024</string>
    <string name="loading" translatable="true">Loading…</string>
    <string name="searchword" translatable="true">Write word or number…</string>
    <string name="title_pronostico" translatable="true">Riddles</string>
    <string name="image" translatable="false">ImageView</string>
    <string name="photo" translatable="true">Content</string>
    <string name="filesdownload" translatable="true">Downloaded: </string>
    <string name="leyendo_archivos" translatable="true">Checking Files: …</string>
    <string name="finished" translatable="true">Files Updated</string>
    <string name="updatedate"  translatable="true">Last check:</string>
    <string name="erase"  translatable="true">Erase Data (Reset App)</string>
    <string name="apptitle"  translatable="true">Application Config</string>
    <string name="sure" translatable="true">Touch for reset data</string>
    <string name="sdk17" translatable="true">Disabled until Android 4.2 (Jelly Bean)</string>
    <string name="darkmode" translatable="true">Change Dark Theme</string>
    <string name="dark" translatable="true">Dark</string>
    <string name="system" translatable="true">Same as System</string>
    <string name="light" translatable="true">Light</string>
    <string name="error" translatable="false">Error</string>
    <string name="completed" translatable="true">Restored!</string>
    <string name="nytittle" translatable="false">New York</string>
    <string name="getittle" translatable="false">Georgia</string>
    <string name="fltittle" translatable="false">Florida</string>
    <string name="copied" translatable="true">ID copied into clipboard</string>
    <string name="copyid" translatable="true">Copy ID to Clipboard</string>
    <string name="copyidsummary" translatable="true">Only Administrators</string>
    <string name="copyidsummaryon" translatable="true">Only for Debug</string>
    <string name="updatmsg" translatable="true">You need to allow Bolita Cubana in Settings to update from \'Unknown Sources\'</string>
    <string name="updat" translatable="true">Update</string>
    <string name="updat2" translatable="true">Outdated Version</string>
    <string name="googleplay" translatable="false">Google Play</string>
    <string name="updatalt" translatable="true">Download APK</string>
    <string name="opensettings" translatable="true">Open Settings</string>
    <string name="noresults" translatable="true">This date does not contain results</string>
</resources>
