<!--
  ~ Copyright (c) CUBANAPP LLC 2019-2023 .
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <PreferenceCategory app:title="@string/languageselector">
        <ListPreference
            app:key="languagepreference"
            app:title="@string/language"
            app:defaultValue="es"
            app:entries="@array/Language"
            app:entryValues="@array/languageAlias"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/notification">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="defaulChannel"
            app:summaryOff="@string/notification_disabled"
            app:summaryOn="@string/notification_enabled"
            app:title="@string/notificaciontitle" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="promoChannel"
            app:summaryOff="@string/promotional_disabled"
            app:summaryOn="@string/notificacionpromotional"
            app:title="@string/promotional" />
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="delegation"
            app:title="@string/messageDelegation" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="exportMetrics"
            app:title="@string/exportBigQuery" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/firebase">
        <SwitchPreferenceCompat
            app:key="dataCollection"
            app:defaultValue="true"
            app:summaryOff="@string/data_disabled"
            app:summaryOn="@string/data_enabled"
            app:title="@string/firebaseData" />
        <SwitchPreferenceCompat
            app:dependency="dataCollection"
            app:defaultValue="true"
            app:key="analytics"
            app:title="@string/analytics" />
        <SwitchPreferenceCompat
            app:dependency="dataCollection"
            app:defaultValue="false"
            app:key="resourceManagement"
            app:title="@string/resourceManagement" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/adstitle">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="allowAdsPerso"
            app:title="@string/adspersonal" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/errorInformes">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="crashlytics"
            app:title="@string/crashlytic" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/performance">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="performance"
            app:title="@string/firebaseperf" />
    </PreferenceCategory>

</PreferenceScreen>
