<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) CUBANAPP LLC 2019-2023 .
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cubanapp.bolitacubana.ui.home.HomeFragment"
        android:label="@string/fragmentHome"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_florida"
        android:name="com.cubanapp.bolitacubana.ui.home.FloridaFragment"
        android:label="@string/florida"
        tools:layout="@layout/fragment_florida">
    </fragment>
    <fragment
        android:id="@+id/navigation_georgia"
        android:name="com.cubanapp.bolitacubana.ui.home.GeorgiaFragment"
        android:label="@string/georgia"
        tools:layout="@layout/fragment_georgia">
    </fragment>
    <fragment
        android:id="@+id/navigation_newyork"
        android:name="com.cubanapp.bolitacubana.ui.home.NewYorkFragment"
        android:label="@string/newyork"
        tools:layout="@layout/fragment_newyork">
    </fragment>

    <fragment
        android:id="@+id/navigation_sevendays"
        android:name="com.cubanapp.bolitacubana.ui.home.SevenDaysFragment"
        android:label="@string/sevenDays"
        tools:layout="@layout/fragment_sevendays"/>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.cubanapp.bolitacubana.ui.search.SearchFragment"
        android:label="@string/fragmentSearch"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_charada"
        android:name="com.cubanapp.bolitacubana.ui.charada.CharadaFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_charada" />

    <fragment
        android:id="@+id/navigation_adivinanza"
        android:name="com.cubanapp.bolitacubana.ui.pronostico.Adivinanza"
        android:label="@string/title_pronostico"
        tools:layout="@layout/fragment_adivinanzas" >
    </fragment>

    <fragment
        android:id="@+id/navigation_imagefullscreen"
        android:name="com.cubanapp.bolitacubana.ui.pronostico.ImageFragment"
        tools:layout="@layout/fragment_imageviewer" >
    </fragment>
</navigation>
