<?xml version="1.0" encoding="utf-8"?>
<!--
  ~      Bolita Cubana
  ~      Copyright (C) 2019-2024 CUBANAPP LLC
  ~
  ~      This program is free software: you can redistribute it and/or modify
  ~      it under the terms of the GNU Affero General Public License as
  ~      published by the Free Software Foundation, either version 3 of the
  ~      License, or (at your option) any later version.
  ~
  ~      This program is distributed in the hope that it will be useful,
  ~      but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~      GNU Affero General Public License for more details.
  ~
  ~      You should have received a copy of the GNU Affero General Public License
  ~      along with this program.  If not, see <https://www.gnu.org/licenses/>.
  ~
  ~      Email contact: help@cubanapp.info
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/navigation_home"
        android:icon="@drawable/round_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@id/navigation_search"
        android:icon="@drawable/round_date_range_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@id/navigation_charada"
        android:icon="@drawable/round_menu_book_24"
        android:title="@string/title_notifications" />

    <item
        android:id="@id/navigation_adivinanza"
        android:icon="@drawable/round_auto_awesome_24"
        android:title="@string/title_pronostico" />

</menu>
